# acid_io

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: byteorder.rs  error.rs  io_alloc.rs  io_core.rs  io_slice.rs  lib.rs  prelude.rs  readbuf.rs  util.rs
src/tests/: buffered.rs  cursor.rs  mod.rs  util.rs
tests/: with_std.rs
