[package]
name = "acid_io"
description = "A pared-down version of std::io usable with no_std"
version = "0.1.0"
edition = "2021"

authors = ["The Rust Project Developers", "dataphract"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dataphract/acid_io.git"
keywords = ["io", "no_std", "core"]
categories = ["no-std"]

[features]
default = []

# byteorder/std should be a weak dependency feature once rust-lang/cargo#8832 is stabilized.
std = ["byteorder/std"]
alloc = []

[dependencies]
byteorder = { version = "1", optional = true, default-features = false }
memchr = { version = "2", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# TODO Windows support
#[target.'cfg(windows)'.dependencies]
#windows = { version = "0.38", features = ["Win32_Networking_WinSock", "Win32_Foundation"] }
